@@ -1,3 +1,6 @@
+Set the rfds correctly so we can get a reply after re-sending a request.
+Set the seconds elasped and maximum message size correctly in DHCP messages.
+Now compiles on Linux 2.4 kernels. 
 xmalloc dhcp objects so we can swap pointer around easily.
 
 dhcpcd-3.0.1
